parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DO

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> class_decl
Rule 3     program -> class_decl program
Rule 4     program -> empty
Rule 5     class_decl -> CLASS ID opt_extend LBRACK class_body_decl_mult RBRACK
Rule 6     opt_extend -> EXTENDS ID
Rule 7     opt_extend -> empty
Rule 8     class_body_decl_mult -> class_body_decl_mult class_body_decl
Rule 9     class_body_decl_mult -> class_body_decl
Rule 10    class_body_decl -> field_decl
Rule 11    class_body_decl -> method_decl
Rule 12    class_body_decl -> constructor_decl
Rule 13    field_decl -> modifier var_decl
Rule 14    modifier -> visibility opt_static
Rule 15    visibility -> PUBLIC
Rule 16    visibility -> PRIVATE
Rule 17    visibility -> empty
Rule 18    opt_static -> STATIC
Rule 19    opt_static -> empty
Rule 20    var_decl -> type variables SEMICOLON
Rule 21    type -> INT
Rule 22    type -> FLOAT
Rule 23    type -> BOOLEAN
Rule 24    type -> ID
Rule 25    variables -> variables COMMA variable
Rule 26    variables -> variable
Rule 27    variable -> ID
Rule 28    method_decl -> modifier type ID LPAREN opt_formals RPAREN block
Rule 29    method_decl -> modifier VOID ID LPAREN opt_formals RPAREN block
Rule 30    opt_formals -> formals
Rule 31    opt_formals -> empty
Rule 32    constructor_decl -> modifier ID LPAREN opt_formals_alt RPAREN block
Rule 33    opt_formals_alt -> formals
Rule 34    opt_formals_alt -> empty
Rule 35    formals -> formals COMMA formal_param
Rule 36    formals -> formal_param
Rule 37    formal_param -> type variable
Rule 38    block -> LBRACK stmt_mult RBRACK
Rule 39    stmt_mult -> stmt_mult stmt
Rule 40    stmt_mult -> empty
Rule 41    stmt -> IF LPAREN expr RPAREN stmt opt_else_stmt
Rule 42    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 43    stmt -> FOR LPAREN opt_stmt_expr SEMICOLON opt_expr SEMICOLON opt_stmt_expr RPAREN stmt
Rule 44    stmt -> RETURN opt_expr SEMICOLON
Rule 45    stmt -> stmt_expr SEMICOLON
Rule 46    stmt -> BREAK SEMICOLON
Rule 47    stmt -> CONTINUE SEMICOLON
Rule 48    stmt -> block
Rule 49    stmt -> var_decl
Rule 50    stmt -> SEMICOLON
Rule 51    opt_else_stmt -> ELSE stmt
Rule 52    opt_else_stmt -> empty
Rule 53    opt_expr -> expr
Rule 54    opt_expr -> empty
Rule 55    opt_stmt_expr -> stmt_expr
Rule 56    opt_stmt_expr -> empty
Rule 57    literal -> INT_CONST
Rule 58    literal -> FLOAT_CONST
Rule 59    literal -> STRING_CONST
Rule 60    literal -> NULL
Rule 61    literal -> TRUE
Rule 62    literal -> FALSE
Rule 63    primary -> literal
Rule 64    primary -> THIS
Rule 65    primary -> SUPER
Rule 66    primary -> LPAREN expr RPAREN
Rule 67    primary -> NEW ID LPAREN opt_args RPAREN
Rule 68    primary -> lhs
Rule 69    primary -> method_invocation
Rule 70    opt_args -> arguments
Rule 71    opt_args -> empty
Rule 72    arguments -> arguments COMMA expr
Rule 73    arguments -> expr
Rule 74    lhs -> field_access
Rule 75    field_access -> primary DOT ID
Rule 76    field_access -> ID
Rule 77    method_invocation -> field_access LPAREN opt_args_alt RPAREN
Rule 78    opt_args_alt -> arguments
Rule 79    opt_args_alt -> empty
Rule 80    expr -> primary
Rule 81    expr -> assign
Rule 82    expr -> expr arith_op expr
Rule 83    expr -> expr bool_op expr
Rule 84    expr -> unary_op expr
Rule 85    assign -> lhs EQUALS expr
Rule 86    assign -> lhs DOUBLE_PLUS
Rule 87    assign -> DOUBLE_PLUS lhs
Rule 88    assign -> lhs DOUBLE_MINUS
Rule 89    assign -> DOUBLE_MINUS lhs
Rule 90    arith_op -> PLUS
Rule 91    arith_op -> MINUS
Rule 92    arith_op -> TIMES
Rule 93    arith_op -> DIVIDE
Rule 94    bool_op -> AND
Rule 95    bool_op -> OR
Rule 96    bool_op -> DOUBLE_EQUALS
Rule 97    bool_op -> NOT_EQUAL
Rule 98    bool_op -> L_EQ
Rule 99    bool_op -> G_EQ
Rule 100   bool_op -> LESS
Rule 101   bool_op -> GREATER
Rule 102   unary_op -> PLUS
Rule 103   unary_op -> MINUS
Rule 104   unary_op -> NOT
Rule 105   stmt_expr -> assign
Rule 106   stmt_expr -> method_invocation

Terminals, with rules where they appear

AND                  : 94
BOOLEAN              : 23
BREAK                : 46
CLASS                : 5
COMMA                : 25 35 72
CONTINUE             : 47
DIVIDE               : 93
DO                   : 
DOT                  : 75
DOUBLE_EQUALS        : 96
DOUBLE_MINUS         : 88 89
DOUBLE_PLUS          : 86 87
ELSE                 : 51
EQUALS               : 85
EXTENDS              : 6
FALSE                : 62
FLOAT                : 22
FLOAT_CONST          : 58
FOR                  : 43
GREATER              : 101
G_EQ                 : 99
ID                   : 5 6 24 27 28 29 32 67 75 76
IF                   : 41
INT                  : 21
INT_CONST            : 57
LBRACK               : 5 38
LESS                 : 100
LPAREN               : 28 29 32 41 42 43 66 67 77
L_EQ                 : 98
MINUS                : 91 103
NEW                  : 67
NOT                  : 104
NOT_EQUAL            : 97
NULL                 : 60
OR                   : 95
PLUS                 : 90 102
PRIVATE              : 16
PUBLIC               : 15
RBRACK               : 5 38
RETURN               : 44
RPAREN               : 28 29 32 41 42 43 66 67 77
SEMICOLON            : 20 43 43 44 45 46 47 50
STATIC               : 18
STRING_CONST         : 59
SUPER                : 65
THIS                 : 64
TIMES                : 92
TRUE                 : 61
VOID                 : 29
WHILE                : 42
error                : 

Nonterminals, with rules where they appear

arguments            : 70 72 78
arith_op             : 82
assign               : 81 105
block                : 28 29 32 48
bool_op              : 83
class_body_decl      : 8 9
class_body_decl_mult : 5 8
class_decl           : 2 3
constructor_decl     : 12
empty                : 4 7 17 19 31 34 40 52 54 56 71 79
expr                 : 41 42 53 66 72 73 82 82 83 83 84 85
field_access         : 74 77
field_decl           : 10
formal_param         : 35 36
formals              : 30 33 35
lhs                  : 68 85 86 87 88 89
literal              : 63
method_decl          : 11
method_invocation    : 69 106
modifier             : 13 28 29 32
opt_args             : 67
opt_args_alt         : 77
opt_else_stmt        : 41
opt_expr             : 43 44
opt_extend           : 5
opt_formals          : 28 29
opt_formals_alt      : 32
opt_static           : 14
opt_stmt_expr        : 43 43
primary              : 75 80
program              : 3 0
stmt                 : 39 41 42 43 51
stmt_expr            : 45 55
stmt_mult            : 38 39
type                 : 20 28 37
unary_op             : 84
var_decl             : 13 49
variable             : 25 26 37
variables            : 20 25
visibility           : 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . class_decl
    (3) program -> . class_decl program
    (4) program -> . empty
    (5) class_decl -> . CLASS ID opt_extend LBRACK class_body_decl_mult RBRACK
    (1) empty -> .

    CLASS           shift and go to state 4
    $end            reduce using rule 1 (empty -> .)

    program                        shift and go to state 1
    class_decl                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (2) program -> class_decl .
    (3) program -> class_decl . program
    (2) program -> . class_decl
    (3) program -> . class_decl program
    (4) program -> . empty
    (5) class_decl -> . CLASS ID opt_extend LBRACK class_body_decl_mult RBRACK
    (1) empty -> .

  ! reduce/reduce conflict for $end resolved using rule 1 (empty -> .)
    CLASS           shift and go to state 4
    $end            reduce using rule 1 (empty -> .)

  ! $end            [ reduce using rule 2 (program -> class_decl .) ]

    class_decl                     shift and go to state 2
    program                        shift and go to state 5
    empty                          shift and go to state 3

state 3

    (4) program -> empty .

    $end            reduce using rule 4 (program -> empty .)


state 4

    (5) class_decl -> CLASS . ID opt_extend LBRACK class_body_decl_mult RBRACK

    ID              shift and go to state 6


state 5

    (3) program -> class_decl program .

    $end            reduce using rule 3 (program -> class_decl program .)


state 6

    (5) class_decl -> CLASS ID . opt_extend LBRACK class_body_decl_mult RBRACK
    (6) opt_extend -> . EXTENDS ID
    (7) opt_extend -> . empty
    (1) empty -> .

    EXTENDS         shift and go to state 8
    LBRACK          reduce using rule 1 (empty -> .)

    opt_extend                     shift and go to state 7
    empty                          shift and go to state 9

state 7

    (5) class_decl -> CLASS ID opt_extend . LBRACK class_body_decl_mult RBRACK

    LBRACK          shift and go to state 10


state 8

    (6) opt_extend -> EXTENDS . ID

    ID              shift and go to state 11


state 9

    (7) opt_extend -> empty .

    LBRACK          reduce using rule 7 (opt_extend -> empty .)


state 10

    (5) class_decl -> CLASS ID opt_extend LBRACK . class_body_decl_mult RBRACK
    (8) class_body_decl_mult -> . class_body_decl_mult class_body_decl
    (9) class_body_decl_mult -> . class_body_decl
    (10) class_body_decl -> . field_decl
    (11) class_body_decl -> . method_decl
    (12) class_body_decl -> . constructor_decl
    (13) field_decl -> . modifier var_decl
    (28) method_decl -> . modifier type ID LPAREN opt_formals RPAREN block
    (29) method_decl -> . modifier VOID ID LPAREN opt_formals RPAREN block
    (32) constructor_decl -> . modifier ID LPAREN opt_formals_alt RPAREN block
    (14) modifier -> . visibility opt_static
    (15) visibility -> . PUBLIC
    (16) visibility -> . PRIVATE
    (17) visibility -> . empty
    (1) empty -> .

    PUBLIC          shift and go to state 19
    PRIVATE         shift and go to state 20
    STATIC          reduce using rule 1 (empty -> .)
    VOID            reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)
    INT             reduce using rule 1 (empty -> .)
    FLOAT           reduce using rule 1 (empty -> .)
    BOOLEAN         reduce using rule 1 (empty -> .)

    class_body_decl_mult           shift and go to state 12
    class_body_decl                shift and go to state 13
    field_decl                     shift and go to state 14
    method_decl                    shift and go to state 15
    constructor_decl               shift and go to state 16
    modifier                       shift and go to state 17
    visibility                     shift and go to state 18
    empty                          shift and go to state 21

state 11

    (6) opt_extend -> EXTENDS ID .

    LBRACK          reduce using rule 6 (opt_extend -> EXTENDS ID .)


state 12

    (5) class_decl -> CLASS ID opt_extend LBRACK class_body_decl_mult . RBRACK
    (8) class_body_decl_mult -> class_body_decl_mult . class_body_decl
    (10) class_body_decl -> . field_decl
    (11) class_body_decl -> . method_decl
    (12) class_body_decl -> . constructor_decl
    (13) field_decl -> . modifier var_decl
    (28) method_decl -> . modifier type ID LPAREN opt_formals RPAREN block
    (29) method_decl -> . modifier VOID ID LPAREN opt_formals RPAREN block
    (32) constructor_decl -> . modifier ID LPAREN opt_formals_alt RPAREN block
    (14) modifier -> . visibility opt_static
    (15) visibility -> . PUBLIC
    (16) visibility -> . PRIVATE
    (17) visibility -> . empty
    (1) empty -> .

    RBRACK          shift and go to state 22
    PUBLIC          shift and go to state 19
    PRIVATE         shift and go to state 20
    STATIC          reduce using rule 1 (empty -> .)
    VOID            reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)
    INT             reduce using rule 1 (empty -> .)
    FLOAT           reduce using rule 1 (empty -> .)
    BOOLEAN         reduce using rule 1 (empty -> .)

    class_body_decl                shift and go to state 23
    field_decl                     shift and go to state 14
    method_decl                    shift and go to state 15
    constructor_decl               shift and go to state 16
    modifier                       shift and go to state 17
    visibility                     shift and go to state 18
    empty                          shift and go to state 21

state 13

    (9) class_body_decl_mult -> class_body_decl .

    RBRACK          reduce using rule 9 (class_body_decl_mult -> class_body_decl .)
    PUBLIC          reduce using rule 9 (class_body_decl_mult -> class_body_decl .)
    PRIVATE         reduce using rule 9 (class_body_decl_mult -> class_body_decl .)
    VOID            reduce using rule 9 (class_body_decl_mult -> class_body_decl .)
    ID              reduce using rule 9 (class_body_decl_mult -> class_body_decl .)
    INT             reduce using rule 9 (class_body_decl_mult -> class_body_decl .)
    FLOAT           reduce using rule 9 (class_body_decl_mult -> class_body_decl .)
    BOOLEAN         reduce using rule 9 (class_body_decl_mult -> class_body_decl .)
    STATIC          reduce using rule 9 (class_body_decl_mult -> class_body_decl .)


state 14

    (10) class_body_decl -> field_decl .

    RBRACK          reduce using rule 10 (class_body_decl -> field_decl .)
    PUBLIC          reduce using rule 10 (class_body_decl -> field_decl .)
    PRIVATE         reduce using rule 10 (class_body_decl -> field_decl .)
    VOID            reduce using rule 10 (class_body_decl -> field_decl .)
    ID              reduce using rule 10 (class_body_decl -> field_decl .)
    INT             reduce using rule 10 (class_body_decl -> field_decl .)
    FLOAT           reduce using rule 10 (class_body_decl -> field_decl .)
    BOOLEAN         reduce using rule 10 (class_body_decl -> field_decl .)
    STATIC          reduce using rule 10 (class_body_decl -> field_decl .)


state 15

    (11) class_body_decl -> method_decl .

    RBRACK          reduce using rule 11 (class_body_decl -> method_decl .)
    PUBLIC          reduce using rule 11 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 11 (class_body_decl -> method_decl .)
    VOID            reduce using rule 11 (class_body_decl -> method_decl .)
    ID              reduce using rule 11 (class_body_decl -> method_decl .)
    INT             reduce using rule 11 (class_body_decl -> method_decl .)
    FLOAT           reduce using rule 11 (class_body_decl -> method_decl .)
    BOOLEAN         reduce using rule 11 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 11 (class_body_decl -> method_decl .)


state 16

    (12) class_body_decl -> constructor_decl .

    RBRACK          reduce using rule 12 (class_body_decl -> constructor_decl .)
    PUBLIC          reduce using rule 12 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 12 (class_body_decl -> constructor_decl .)
    VOID            reduce using rule 12 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 12 (class_body_decl -> constructor_decl .)
    INT             reduce using rule 12 (class_body_decl -> constructor_decl .)
    FLOAT           reduce using rule 12 (class_body_decl -> constructor_decl .)
    BOOLEAN         reduce using rule 12 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 12 (class_body_decl -> constructor_decl .)


state 17

    (13) field_decl -> modifier . var_decl
    (28) method_decl -> modifier . type ID LPAREN opt_formals RPAREN block
    (29) method_decl -> modifier . VOID ID LPAREN opt_formals RPAREN block
    (32) constructor_decl -> modifier . ID LPAREN opt_formals_alt RPAREN block
    (20) var_decl -> . type variables SEMICOLON
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . BOOLEAN
    (24) type -> . ID

    VOID            shift and go to state 27
    ID              shift and go to state 26
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    BOOLEAN         shift and go to state 30

    var_decl                       shift and go to state 24
    type                           shift and go to state 25

state 18

    (14) modifier -> visibility . opt_static
    (18) opt_static -> . STATIC
    (19) opt_static -> . empty
    (1) empty -> .

    STATIC          shift and go to state 32
    VOID            reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)
    INT             reduce using rule 1 (empty -> .)
    FLOAT           reduce using rule 1 (empty -> .)
    BOOLEAN         reduce using rule 1 (empty -> .)

    opt_static                     shift and go to state 31
    empty                          shift and go to state 33

state 19

    (15) visibility -> PUBLIC .

    STATIC          reduce using rule 15 (visibility -> PUBLIC .)
    VOID            reduce using rule 15 (visibility -> PUBLIC .)
    ID              reduce using rule 15 (visibility -> PUBLIC .)
    INT             reduce using rule 15 (visibility -> PUBLIC .)
    FLOAT           reduce using rule 15 (visibility -> PUBLIC .)
    BOOLEAN         reduce using rule 15 (visibility -> PUBLIC .)


state 20

    (16) visibility -> PRIVATE .

    STATIC          reduce using rule 16 (visibility -> PRIVATE .)
    VOID            reduce using rule 16 (visibility -> PRIVATE .)
    ID              reduce using rule 16 (visibility -> PRIVATE .)
    INT             reduce using rule 16 (visibility -> PRIVATE .)
    FLOAT           reduce using rule 16 (visibility -> PRIVATE .)
    BOOLEAN         reduce using rule 16 (visibility -> PRIVATE .)


state 21

    (17) visibility -> empty .

    STATIC          reduce using rule 17 (visibility -> empty .)
    VOID            reduce using rule 17 (visibility -> empty .)
    ID              reduce using rule 17 (visibility -> empty .)
    INT             reduce using rule 17 (visibility -> empty .)
    FLOAT           reduce using rule 17 (visibility -> empty .)
    BOOLEAN         reduce using rule 17 (visibility -> empty .)


state 22

    (5) class_decl -> CLASS ID opt_extend LBRACK class_body_decl_mult RBRACK .

    CLASS           reduce using rule 5 (class_decl -> CLASS ID opt_extend LBRACK class_body_decl_mult RBRACK .)
    $end            reduce using rule 5 (class_decl -> CLASS ID opt_extend LBRACK class_body_decl_mult RBRACK .)


state 23

    (8) class_body_decl_mult -> class_body_decl_mult class_body_decl .

    RBRACK          reduce using rule 8 (class_body_decl_mult -> class_body_decl_mult class_body_decl .)
    PUBLIC          reduce using rule 8 (class_body_decl_mult -> class_body_decl_mult class_body_decl .)
    PRIVATE         reduce using rule 8 (class_body_decl_mult -> class_body_decl_mult class_body_decl .)
    VOID            reduce using rule 8 (class_body_decl_mult -> class_body_decl_mult class_body_decl .)
    ID              reduce using rule 8 (class_body_decl_mult -> class_body_decl_mult class_body_decl .)
    INT             reduce using rule 8 (class_body_decl_mult -> class_body_decl_mult class_body_decl .)
    FLOAT           reduce using rule 8 (class_body_decl_mult -> class_body_decl_mult class_body_decl .)
    BOOLEAN         reduce using rule 8 (class_body_decl_mult -> class_body_decl_mult class_body_decl .)
    STATIC          reduce using rule 8 (class_body_decl_mult -> class_body_decl_mult class_body_decl .)


state 24

    (13) field_decl -> modifier var_decl .

    RBRACK          reduce using rule 13 (field_decl -> modifier var_decl .)
    PUBLIC          reduce using rule 13 (field_decl -> modifier var_decl .)
    PRIVATE         reduce using rule 13 (field_decl -> modifier var_decl .)
    VOID            reduce using rule 13 (field_decl -> modifier var_decl .)
    ID              reduce using rule 13 (field_decl -> modifier var_decl .)
    INT             reduce using rule 13 (field_decl -> modifier var_decl .)
    FLOAT           reduce using rule 13 (field_decl -> modifier var_decl .)
    BOOLEAN         reduce using rule 13 (field_decl -> modifier var_decl .)
    STATIC          reduce using rule 13 (field_decl -> modifier var_decl .)


state 25

    (28) method_decl -> modifier type . ID LPAREN opt_formals RPAREN block
    (20) var_decl -> type . variables SEMICOLON
    (25) variables -> . variables COMMA variable
    (26) variables -> . variable
    (27) variable -> . ID

    ID              shift and go to state 34

    variables                      shift and go to state 35
    variable                       shift and go to state 36

state 26

    (32) constructor_decl -> modifier ID . LPAREN opt_formals_alt RPAREN block
    (24) type -> ID .

    LPAREN          shift and go to state 37
    ID              reduce using rule 24 (type -> ID .)


state 27

    (29) method_decl -> modifier VOID . ID LPAREN opt_formals RPAREN block

    ID              shift and go to state 38


state 28

    (21) type -> INT .

    ID              reduce using rule 21 (type -> INT .)


state 29

    (22) type -> FLOAT .

    ID              reduce using rule 22 (type -> FLOAT .)


state 30

    (23) type -> BOOLEAN .

    ID              reduce using rule 23 (type -> BOOLEAN .)


state 31

    (14) modifier -> visibility opt_static .

    VOID            reduce using rule 14 (modifier -> visibility opt_static .)
    ID              reduce using rule 14 (modifier -> visibility opt_static .)
    INT             reduce using rule 14 (modifier -> visibility opt_static .)
    FLOAT           reduce using rule 14 (modifier -> visibility opt_static .)
    BOOLEAN         reduce using rule 14 (modifier -> visibility opt_static .)


state 32

    (18) opt_static -> STATIC .

    VOID            reduce using rule 18 (opt_static -> STATIC .)
    ID              reduce using rule 18 (opt_static -> STATIC .)
    INT             reduce using rule 18 (opt_static -> STATIC .)
    FLOAT           reduce using rule 18 (opt_static -> STATIC .)
    BOOLEAN         reduce using rule 18 (opt_static -> STATIC .)


state 33

    (19) opt_static -> empty .

    VOID            reduce using rule 19 (opt_static -> empty .)
    ID              reduce using rule 19 (opt_static -> empty .)
    INT             reduce using rule 19 (opt_static -> empty .)
    FLOAT           reduce using rule 19 (opt_static -> empty .)
    BOOLEAN         reduce using rule 19 (opt_static -> empty .)


state 34

    (28) method_decl -> modifier type ID . LPAREN opt_formals RPAREN block
    (27) variable -> ID .

    LPAREN          shift and go to state 39
    SEMICOLON       reduce using rule 27 (variable -> ID .)
    COMMA           reduce using rule 27 (variable -> ID .)


state 35

    (20) var_decl -> type variables . SEMICOLON
    (25) variables -> variables . COMMA variable

    SEMICOLON       shift and go to state 40
    COMMA           shift and go to state 41


state 36

    (26) variables -> variable .

    SEMICOLON       reduce using rule 26 (variables -> variable .)
    COMMA           reduce using rule 26 (variables -> variable .)


state 37

    (32) constructor_decl -> modifier ID LPAREN . opt_formals_alt RPAREN block
    (33) opt_formals_alt -> . formals
    (34) opt_formals_alt -> . empty
    (35) formals -> . formals COMMA formal_param
    (36) formals -> . formal_param
    (1) empty -> .
    (37) formal_param -> . type variable
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . BOOLEAN
    (24) type -> . ID

    RPAREN          reduce using rule 1 (empty -> .)
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    BOOLEAN         shift and go to state 30
    ID              shift and go to state 42

    opt_formals_alt                shift and go to state 43
    formals                        shift and go to state 44
    empty                          shift and go to state 45
    formal_param                   shift and go to state 46
    type                           shift and go to state 47

state 38

    (29) method_decl -> modifier VOID ID . LPAREN opt_formals RPAREN block

    LPAREN          shift and go to state 48


state 39

    (28) method_decl -> modifier type ID LPAREN . opt_formals RPAREN block
    (30) opt_formals -> . formals
    (31) opt_formals -> . empty
    (35) formals -> . formals COMMA formal_param
    (36) formals -> . formal_param
    (1) empty -> .
    (37) formal_param -> . type variable
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . BOOLEAN
    (24) type -> . ID

    RPAREN          reduce using rule 1 (empty -> .)
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    BOOLEAN         shift and go to state 30
    ID              shift and go to state 42

    type                           shift and go to state 47
    opt_formals                    shift and go to state 49
    formals                        shift and go to state 50
    empty                          shift and go to state 51
    formal_param                   shift and go to state 46

state 40

    (20) var_decl -> type variables SEMICOLON .

    RBRACK          reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    PUBLIC          reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    PRIVATE         reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    VOID            reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    ID              reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    INT             reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    FLOAT           reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    BOOLEAN         reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    STATIC          reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    IF              reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    WHILE           reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    FOR             reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    RETURN          reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    BREAK           reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    CONTINUE        reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    SEMICOLON       reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    LBRACK          reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    DOUBLE_PLUS     reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    DOUBLE_MINUS    reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    THIS            reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    SUPER           reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    LPAREN          reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    NEW             reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    INT_CONST       reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    FLOAT_CONST     reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    STRING_CONST    reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    NULL            reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    TRUE            reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    FALSE           reduce using rule 20 (var_decl -> type variables SEMICOLON .)
    ELSE            reduce using rule 20 (var_decl -> type variables SEMICOLON .)


state 41

    (25) variables -> variables COMMA . variable
    (27) variable -> . ID

    ID              shift and go to state 53

    variable                       shift and go to state 52

state 42

    (24) type -> ID .

    ID              reduce using rule 24 (type -> ID .)


state 43

    (32) constructor_decl -> modifier ID LPAREN opt_formals_alt . RPAREN block

    RPAREN          shift and go to state 54


state 44

    (33) opt_formals_alt -> formals .
    (35) formals -> formals . COMMA formal_param

    RPAREN          reduce using rule 33 (opt_formals_alt -> formals .)
    COMMA           shift and go to state 55


state 45

    (34) opt_formals_alt -> empty .

    RPAREN          reduce using rule 34 (opt_formals_alt -> empty .)


state 46

    (36) formals -> formal_param .

    COMMA           reduce using rule 36 (formals -> formal_param .)
    RPAREN          reduce using rule 36 (formals -> formal_param .)


state 47

    (37) formal_param -> type . variable
    (27) variable -> . ID

    ID              shift and go to state 53

    variable                       shift and go to state 56

state 48

    (29) method_decl -> modifier VOID ID LPAREN . opt_formals RPAREN block
    (30) opt_formals -> . formals
    (31) opt_formals -> . empty
    (35) formals -> . formals COMMA formal_param
    (36) formals -> . formal_param
    (1) empty -> .
    (37) formal_param -> . type variable
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . BOOLEAN
    (24) type -> . ID

    RPAREN          reduce using rule 1 (empty -> .)
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    BOOLEAN         shift and go to state 30
    ID              shift and go to state 42

    opt_formals                    shift and go to state 57
    formals                        shift and go to state 50
    empty                          shift and go to state 51
    formal_param                   shift and go to state 46
    type                           shift and go to state 47

state 49

    (28) method_decl -> modifier type ID LPAREN opt_formals . RPAREN block

    RPAREN          shift and go to state 58


state 50

    (30) opt_formals -> formals .
    (35) formals -> formals . COMMA formal_param

    RPAREN          reduce using rule 30 (opt_formals -> formals .)
    COMMA           shift and go to state 55

